--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "url": "https://github.com/atomizejs/atomize-server-node.git"
     },
     "main": "index",
-    "description": "Node server library for atomize: JavaScript DSTM",
+    "description": "Node server library for AtomizeJS: JavaScript DSTM",
     "dependencies": {
         "cereal": "*",
         "atomize-client": ">=0.0.1",
