--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "atomize-server",
     "author": "Matthew Sackman",
-    "version": "0.0.3",
+    "version": "0.0.4",
     "repository": {
         "type": "git",
         "url": "git://github.com/atomizejs/atomize-server-node.git"
@@ -9,8 +9,8 @@
     "main": "index",
     "description": "Node server library for AtomizeJS: JavaScript DSTM",
     "dependencies": {
-        "cereal": "*",
-        "atomize-client": ">=0.0.4",
+        "cereal": ">=0.0.7",
+        "atomize-client": ">=0.0.7",
         "sockjs": ">=0.1.0"
     },
     "homepage": "http://atomizejs.github.com/"
